--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         homepage: 'home.md',
         coverpage: true,
         subMaxLevel: 9999,
-        name: 'handsome',
+        name: 'laoyo Java docs',
         loadSidebar: true,
         autoHeader: true,
         auto2top: true,
