--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Handsome 使用文档</title>
+    <title>laoyo 学习文档</title>
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="icon" type="image/ico" href="https://www.ihewro.com/favicon.ico">
+    <link rel="icon" type="image/ico" href="https://laoamo.io/favicon.ico">
     <link rel="stylesheet" href="//cdn.bootcss.com/docsify/4.3.0/themes/vue.css">
 </head>
 <body>
