--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         loadSidebar: true,
         autoHeader: true,
         auto2top: true,
-        repo: 'ihewro/typecho-theme-handsome-docs',
+        repo: 'ByMorata/docs',
         search: {
             paths: 'auto',
             placeholder: '输入关键字，快速寻找答案 🔍',
