--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script>
     window.$docsify = {
         homepage: 'home.md',
-        coverpage: true,
+        coverpage: false,
         subMaxLevel: 9999,
         name: 'laoyo Java docs',
         loadSidebar: true,
